@@ -52,7 +52,7 @@ extern "C" {
  *
  *  @see AppCmdArgBase
  *
- *  @version $Id: AppCmdArg.hh,v 1.3 2004/08/24 17:04:22 salnikov Exp $
+ *  @version $Id$
  *
  *  @author Andy Salnikov	(originator)
  */
